Add screenshots to README.md